force-app/main/default/objects/Quality_Search_Field__mdt/Quality_Search_Field__mdt.object-meta.xml
<CustomObject>
    <description>A field on an Object that participates in matching, display, or both. Whitelist-validated against Schema describe at runtime.</description>
    <label>Quality Search Field</label>
    <pluralLabel>Quality Search Fields</pluralLabel>
</CustomObject>