force-app/main/default/objects/Quality_Search_Field__mdt/fields/Display_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Field_Type__c</fullName>
    <description>Hint that drives result-card rendering (lightning-formatted-email/phone/date-time vs plain text). Required for Role = Display or Both.</description>
    <label>Display Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>