force-app/main/default/objects/Quality_Search_Field__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the field on the parent Object (e.g. Email, PersonMobilePhone, MailingCity). Whitelist-validated at runtime via Schema describe.</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>