force-app/main/default/objects/Quality_Search_Field__mdt/fields/Match_Input__c.field-meta.xml
<CustomField>
    <fullName>Match_Input__c</fullName>
    <description>The logical Input whose value this field receives. Required for Role = Match or Both. Multiple Field rows can point to the same Input — that is how one input maps across multiple objects.</description>
    <label>Match Input</label>
    <referenceTo>Quality_Search_Input__mdt</referenceTo>
    <relationshipLabel>Mapped Fields</relationshipLabel>
    <relationshipName>Mapped_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>