force-app/main/default/objects/Quality_Search_Field__mdt/fields/Match_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Match_Strategy__c</fullName>
    <description>How the user-supplied value is compared to the stored value. Exact = SOQL =. Phone = strip non-digit/plus before comparison. Date = parse ISO yyyy-MM-dd. Required when Role is Match or Both.</description>
    <label>Match Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>