force-app/main/default/objects/Quality_Search_Field__mdt/fields/Object_Config__c.field-meta.xml
<CustomField>
    <fullName>Object_Config__c</fullName>
    <description>Parent object configuration this field belongs to.</description>
    <label>Object Config</label>
    <referenceTo>Quality_Search_Object__mdt</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>