force-app/main/default/objects/Quality_Search_Field__mdt/fields/Phone_Group__c.field-meta.xml
<CustomField>
    <fullName>Phone_Group__c</fullName>
    <description>Optional group key. All fields on the same object with the same Phone_Group__c value and Match_Strategy__c = Phone are combined into one OR-clause (e.g. MobilePhone OR Phone OR HomePhone). Leave blank for non-phone fields.</description>
    <label>Phone Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>