force-app/main/default/objects/Quality_Search_Field__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Match: field is used in the WHERE clause and not shown. Display: field is shown on the result card and not searched. Both: field is searched AND shown.</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>