force-app/main/default/objects/Quality_Search_Field__mdt/fields/UI_Label__c.field-meta.xml
<CustomField>
    <fullName>UI_Label__c</fullName>
    <description>Label shown on the result card next to this field's value. Required for Role = Display or Both.</description>
    <label>UI Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>